snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__bin__fstconcat-main.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/bin/fstconcat-main.cc",
    ),
    start_line: 1,
    end_line: 49,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 5,
            exit_sum: 5,
            total_space_functions: 0,
            exit_min: 5,
            exit_max: 5,
        },
        cognitive: Stats {
            structural: 6,
            structural_sum: 6,
            structural_min: 6,
            structural_max: 6,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 10.0,
            cyclomatic: 10.0,
            n: 1,
            cyclomatic_max: 10.0,
            cyclomatic_min: 10.0,
        },
        halstead: Stats {
            u_operators: 24,
            operators: 122,
            u_operands: 39,
            operands: 88,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 49,
                unit: true,
                sloc_min: 49,
                sloc_max: 49,
            },
            ploc: Ploc {
                lines: {
                    43,
                    40,
                    37,
                    34,
                    31,
                    28,
                    25,
                    19,
                    16,
                    10,
                    7,
                    47,
                    35,
                    32,
                    26,
                    23,
                    20,
                    17,
                    14,
                    11,
                    8,
                    5,
                    48,
                    45,
                    42,
                    39,
                    36,
                    30,
                    27,
                    24,
                    21,
                    15,
                    12,
                },
                ploc_min: 33,
                ploc_max: 33,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 0,
                comment_line_end: Some(
                    3,
                ),
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 23,
                lloc_min: 23,
                lloc_max: 23,
            },
            space_count: 1,
            blank_min: 12,
            blank_max: 12,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 210.0,
            halstead_vocabulary: 63.0,
            halstead_volume: 1255.2287839349826,
            cyclomatic: 10.0,
            sloc: 49.0,
            comments_percentage: 0.08163265306122448,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
